class_name LobbyRolesContainer
extends Control

@onready var lobby_role := %LobbyRole
@onready var lobby_role_2 := %LobbyRole2
@onready var lobby_role_3 := %LobbyRole3
@onready var lobby_role_4 := %LobbyRole4

# Called when the node enters the scene tree for the first time
func _ready() -> void:
	pass
